--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta property=“og:title” content=“Onix Script Repository" />
+		<meta property="og:description" content="A new way (prob) to download onix client scripts!" />
 		<title>Onix Script Repo</title>
 		%sveltekit.head%
 	</head>
